# quant-crew

./: LICENSE  main.py  pyproject.toml  requirements.txt
app/core/: config.py
