[project]
name = "quant-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai==1.5.0",
    "litellm==1.80.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.2.1",
    "tavily-python==0.7.13",
]
